--- a/views/notificaciones.ejs
+++ b/views/notificaciones.ejs
@@ -1,6 +1,6 @@
 <html ng-app="app">
   <head>
-    <title><%= title %> ???</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="../stylesheets/bootstrap.css">
     <script src="../javascripts/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>
