--- a/views/notificaciones.ejs
+++ b/views/notificaciones.ejs
@@ -32,7 +32,7 @@ mmargin-bottom:10px;
         <div class="form-group">
           <label  for="cboType">Tipos</label>
           <select ng-model="type"  id="cboType" class="form-control">
-            <option  ng-repeat="type in types" value="{{type}}">{{type.value}}</option>
+            <option  ng-repeat="item_type in types" value="{{item_type}}">{{item_type.value}}</option>
         </select>
         </div>
     </div>
@@ -48,7 +48,7 @@ mmargin-bottom:10px;
         <div class="form-group">
           <label  for="cboInnerId">Inner Id</label>
           <select ng-model="innerid" id="cboInnerId" class="form-control">
-              <option  ng-repeat="innerid in inner_id" value="{{innerid}}">{{innerid.value}}</option>
+              <option  ng-repeat="innerid in inner_ids" value="{{innerid}}">{{innerid.value}}</option>
           </select>
         </div>
     </div>
