--- a/views/notificaciones.ejs
+++ b/views/notificaciones.ejs
@@ -20,7 +20,7 @@ mmargin-bottom:10px;
   <strong>Mensaje </strong> {{error.error}}
 </div>
 
-<div class="alert alert-success" ng-if="success.message">
+<div class="alert alert-success" ng-if='success.message && message_show==true'>
   {{success.message}}
 </div>
 
